Add network
